# Parallel-Programming-for-Multicore-and-Cluster-Systems

./: CMakeLists.txt
ch7_linear_systems/: CMakeLists.txt  gauss_cyclic.cc  gaussian_elimination.cc  jacobi.cc  mat_cache.cc  mpi_GS.cc  mpi_matvec.cc
include/: tools.h
tests/: CMakeLists.txt  ex5_6.cc  mpi_alltotal.cc  mpi_communicators.cc  mpi_group.cc  mpi_op_create.cc  mpi_scatter_gather.cc  mpi_topologies.cc  mpi_wtick.cc  ping_pong.cc
